# zola

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
tests/: test_zola.py
zola/: account_manager.py  console.py  gmail_utils.py  llm_utils.py  main.py  processing.py  settings.py
