[project]
name = "zola"
version = "0.1.0"
description = "A Gmail classifier that labels messages using an LLM."
requires-python = ">=3.12"

dependencies = ["aiogoogle", "aiolimiter", "humanize", "markitdown", "mlx-lm", "rich", "tenacity", "tqdm"]

[project.scripts]
zola = "zola.main:main"

[tool.ruff]
line-length = 120
